# fast_mac_transcribe_diarise_local_models_only

./: .gitignore  2026-01-22 09-01-07.srt  README.md  pyproject.toml
design/: _build-overlay.md  gpu-provisioning.md  gpu-verification.md  linux-cuda-dev-plan.md  provision-cuda.sh  slice0-ground-truth.md  slice0.5-reconciliation-analysis.md  slice0.5-reconciliation.md  slice5a-wrapper-audit.md
docs/: mac-audio-capture-research.md
skill/: SKILL.md
src/diarise_transcribe/: asr.py  asr_nemo.py  audio.py  cli.py  diarisation.py  merge.py  muesli_backend.py  numba_cache.py  reprocess.py  senko_diarisation.py
tests/: test_asr.py  test_asr_dispatch.py  test_asr_nemo.py  test_asr_nemo_integration.py  test_cli_backward_compat.py  test_cuda_poison.py  test_device_wiring.py  test_diarisation_resolve_symlinks.py  test_golden_contract.py  test_numba_cache.py  test_reprocess_recovery.py  test_senko_diarisation.py  test_stream_separation.py
tests/fixtures/golden/: GROUND-TRUTH.md  reference-stdout.jsonl
